@@ -56,6 +56,7 @@ Bugs fixed
 - Bug 2564 - Simulation crashes when CtsTimeout is triggered for A-MPDU transmissions
 - Bug 2566 - BlockAckManager::GetNRetryNeededPackets missing some packets in the queue
 - Bug 2577 - simulation crashes when A-MPDU and multiple TOS are used with RTS-CTS enabled
+- Bug 2578 - Assert "Internal collision but no packet in queue" unexpectedly triggered
 - Bug 2584 - MacLow triggers StartNext even if there is no TXOP
 - Bug 2590 - Minor enhancements in red-queue-disc{.h, .cc}
 - Bug 2591 - 802.11e Block Ack mechanism cannot be enabled on HT/VHT stations
